change folder names

--- a/cpp.avl/Makefile
+++ b/cpp.avl/Makefile
@@ -34,4 +34,4 @@ $(ODIR):
 ##################################################################
 .PHONY: clean
 clean:
-	rm -r $(EXET) $(ODIR)
+	rm -r $(EXET) $(ODIR)/*
