minor format tweak

--- a/cpp/avl/Makefile
+++ b/cpp/avl/Makefile
@@ -1,5 +1,5 @@
 ##################################################################
-## MAKEFILE: TEMPLATE                                           ##
+## PROJECT: TEST."AVL-TREE"                                     ##
 ##################################################################
 TMPL		:= 
 HDIR 		:= hdr
